--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Hugh's Website</title>
-
     <meta charset="utf-8" />
     <link href="style.css" type="text/css" rel="stylesheet"/>   
 </head>
@@ -11,7 +9,9 @@
 <body>
 <div>
     <h1>Hugh's Website</h1>
-    <p>My name is Hugh, and this is where my website and blog will be, once I actually have time to make them. Until then, you can find me on <a href="https://linkedin.com/in/hughjoreilly/">linkedin</a> or email me at horeilly1101@gmail.com.</p>
+    <p>My name is Hugh, and this is where my website and blog will be once I actually have time to make them. Until then, you can find me on <a href="https://linkedin.com/in/hughjoreilly/">linkedin</a> or email me at horeilly1101@gmail.com.</p>
+    <hr>
+    <p class="credit">The source code of <a href="example.com">example.com</a> was used as inspiration for this (in progress) landing page.</p>
 </div>
 </body>
 </html>
