--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <h1>Hugh's Website</h1>
-    <p>My name is Hugh, and this is where my website and blog will be once I actually have time to make them. Until then, you can find me on <a href="https://linkedin.com/in/hughjoreilly/">linkedin</a> or email me at horeilly1101@gmail.com.</p>
+    <p>My name is Hugh, and this is where my website and blog will be once I actually have time to make them. Until then, you can find me on <a href="https://linkedin.com/in/hughjoreilly/">linkedin</a> or email me at <a href="mailto:horeilly1101@gmail.com">horeilly1101@gmail.com.</a></p>
     <hr>
     <p class="credit">The source code of <a href="https://www.example.com">example.com</a> was used as inspiration for this (in progress) landing page.  Background picture taken by <a href="https://unsplash.com/@siniz">Siniz Kim<a/>.</p>
 </div>
