--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Hugh's Website</title>
     <meta charset="utf-8" />
-    <link href="style.css" type="text/css" rel="stylesheet"/>   
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link rel="icon" href="hugh_favicon.png">
 </head>
 
 <body>
