--- a/index.html
+++ b/index.html
@@ -4,26 +4,11 @@
   <title>deriv</title>
   <!-- load stylesheet -->
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-  <!-- configure MathJax -->
-  <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-  </script>
-
-  <!-- import MathJax -->
-  <script type="text/javascript" async
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
 </head>
 <body>
   <div id="demo">
-    <h1>$deriv$</h1>
-    <h2 id="header">$results$ $here$</h2>
-    <button type="button" onclick="loadDerivative()" style="height:60;font-size:14pt;">Differentiate</button>
-    <input type="text" name="exprInput" id="exprInput" placeholder="Expression" size=30>
-    <br><br> $with$ $respect$ $to$ 
-    <input type="text" name="varInput" id="varInput" placeholder="Variable" size=8>
+    <h1>Hugh O'Reilly's Website</h1>
+    <h2 id="header">Isn't done yet. Check in later pls.</h2>
   </div>
-  <script src="scripts.js"></script>
 </body>
 </html>
