--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>deriv</title>
+  <title>Hugh O'Reilly</title>
   <!-- load stylesheet -->
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -9,6 +9,7 @@
   <div id="demo">
     <h1>Hugh O'Reilly's Website</h1>
     <h2 id="header">Isn't done yet. Check in later pls.</h2>
+    <h3><a href="https://www.linkedin.com/in/hughjoreilly">LinkedIn</a> | <a href="https://www.github.com/horeilly1101">GitHub</a></h3>
   </div>
 </body>
 </html>
