--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>Hugh O'Reilly III</title><link href="/static/css/main.a0041539.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],f=0,i=[];f<n.length;f++)t=n[f],p[t]&&i.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=f(f.s=t[0]))}return e}var t={},p={1:0},c=[];function f(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,f),r.l=!0,r.exports}f.m=l,f.c=t,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(r,e){if(1&e&&(r=f(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)f.d(t,n,function(e){return r[e]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var r=window.webpackJsonp=window.webpackJsonp||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;a()}([])</script><script src="/static/js/2.0098c121.chunk.js"></script><script src="/static/js/main.ce8cbaac.chunk.js"></script></body></html>
+<html>
+    <head>
+        <title>Hugh O'Reilly</title>
+        <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+        <link rel='icon' href='static/media/favicon.ico' type='image/x-icon'/ >
+    </head>
+    <body>        
+        <div class="bio">
+            <h1>Hi, I'm Hugh.</h1>
+            <p>
+                I'm a third-year Computer Science and Math double major at <a class="link" href="https://rice.edu">Rice University</a>, and I'm interested in Software Engineering. I get excited by high-impact opportunities that that will accelerate my personal and professional growth.
+            </p>
+            <p>
+                Last summer, I worked as a Software Engineering Intern at <a class="link" href="https://indeed.com">Indeed</a> in Austin, TX. For the summer of 2020, I'll be interning at <a class="link" href="https://plaid.com">Plaid</a> in San Francisco, CA, as a <a class="link" href="https://fellows.kleinerperkins.com/">Kleiner Perkins Engineering Fellow</a>.
+            </p>
+            <p>
+                For the last year, I've led the <a class="link" href="https://hack.rice.edu">HackRice</a> organization at Rice. As a Co-Director, I was in charge of company outreach, planning, budgeting, and everything in between. I also work as a teaching assistant and spend a lot of time working on open source side projects. 
+            </p>
+            <p>
+                Feel free to reach out at the links below.
+            </p>
+            <div class="proj">
+                <a href="https://github.com/horeilly1101">
+                    <img class="logo" src="static/media/github-blue.svg" alt="GitHub">
+                </a>
+                <a href="https://linkedin.com/in/hughjoreilly">
+                    <img class="logo" src="static/media/linkedin-blue.svg" alt="LinkedIn">
+                </a>
+                <a href="mailto:horeilly1101@gmail.com">
+                    <img class="logo" src="static/media/email-blue.svg" alt="Email">
+                </a>
+            </div>
+        </div>
+    </body>
+</html>
