--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
     <head>
         <title>Hugh O'Reilly</title>
+
         <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+        <link rel='icon' href='static/media/favicon.ico' type='image/x-icon'>
         <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-        <link rel='icon' href='static/media/favicon.ico' type='image/x-icon'/ >
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155024735-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-155024735-1');
-    </script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155024735-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-155024735-1');
+        </script>
     </head>
     <body>        
         <div class="bio">
