--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
             gtag('config', 'UA-155024735-1');
         </script>
     </head>
-    <body>        
+    <body>
+<!--         <div class="nav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div> -->
+
         <div class="bio">
             <h1>Hi, I'm Hugh.</h1>
             <p>
