--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script>
         var typed3 = new Typed('#intro', {
             strings: [
-                'Hugh O\'Reilly III',
+                'Hi,^1000 I\'m Hugh.',
             ],
             typeSpeed: 20,
             startDelay: 1500,
