--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         });
     </script>
     <script>
-        var typed3 = new Typed('#intro', {
+        const typed = new Typed('#intro', {
             strings: [
-                'Hi,^1000 I\'m Hugh.',
+                'Hugh^1000 O\'Reilly',
             ],
             typeSpeed: 20,
             startDelay: 1500,
