--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script>
         const typed = new Typed('#intro', {
             strings: [
-                'Hugh^1000 O\'Reilly',
+                'Hugh O\'Reilly',
             ],
             typeSpeed: 20,
             startDelay: 1500,
